# lll-cognitive-core

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
lll_cognitive_core/: __init__.py
lll_cognitive_core/config/: __init__.py  cognitive_core_config.py  create_openai_config.py
lll_cognitive_core/core/: __init__.py  behavior_executor.py  cache_memory_manager.py  cognitive_core.py  data_structures.py  plugin_interfaces.py
lll_cognitive_core/plugins/: __init__.py  cognitive_core_plugin_default_action_search.py  cognitive_core_plugin_default_associative_recall.py  cognitive_core_plugin_default_associative_recall_filter.py  cognitive_core_plugin_default_behavior_execution.py  cognitive_core_plugin_default_behavior_generation.py  cognitive_core_plugin_default_event_understanding.py  cognitive_core_plugin_default_memory_extraction.py  cognitive_core_plugin_default_memory_manager.py  cognitive_core_plugin_default_morning_situation.py
lll_cognitive_core/utils/: __init__.py  debug_logger.py  generate_template_prompt.py  get_chat_response.py
lll_cognitive_core/web/: __init__.py  create_cognitive_app.py  create_openai.py
tests/core/: test_cache_memory_manager.py  test_cognitive_core.py
tests/plugins/: test_cognitive_core_plugin_default_memory_manager.py
tests/utils/: test_get_chat_response.py
